# cody-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPO_OVERVIEW.md  TODO.md  cody.cmd  install-codex.bat  install-codin.bat  install-cody.ps1  llm.py  mypy.ini  pyproject.toml  ruff.toml  run.py  task.py  windows_agent.py  windows_cmd.py
.cody/: codex.db  config.json  history.txt  hosts.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
src/crew_agent/: __main__.py  backup.py  cli.py  crew.py  inventory.py  llm.py  models.py  orchestrator.py  paths.py  planner.py  request_router.py  setup_wizard.py  ui.py  validators.py
src/crew_agent/agents/: __init__.py  loader.py
src/crew_agent/agents/definitions/: file-reader.yaml  infra-inspector.yaml  infra-planner.yaml  memory-keeper.yaml  repo-inspector.yaml  repo-searcher.yaml  test-runner.yaml  workspace-operator.yaml
src/crew_agent/conversation/: __init__.py  ollama.py  router.py
src/crew_agent/core/: __init__.py  answering.py  db.py  memory.py  models.py  operator_mode.py  paths.py  ui.py
src/crew_agent/executors/: __init__.py  runtime.py
src/crew_agent/handlers/: __init__.py  backup.py  code.py  deterministic.py  deterministic.py_fragment  orchestrator.py  planner.py  task_router.py  workspace.py
src/crew_agent/policy/: __init__.py  config.py  gates.py  validation.py
src/crew_agent/providers/: __init__.py  inventory.py  proxmox.py  synology.py
src/crew_agent/tools/: __init__.py  discovery.py  file_editor.py  web_search.py  windows_cmd.py
tests/: conftest.py  test_agents.py  test_answering.py  test_code_tasks.py  test_inspection_policies.py  test_memory_and_routing.py  test_operator_mode.py
tests/regression/: test_orchestrator_scenarios.py  test_transcripts.py
tests/unit/: test_file_editor.py
tools/: windows_cmd.py
