[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crew-agent"
version = "0.2.0"
description = "Autonomous infrastructure orchestrator shell powered by local Ollama AI models."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "M. Farid (Mufasa)"}]
requires-python = ">=3.10,<3.14"
keywords = ["infrastructure", "automation", "cli", "ollama", "agent", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "crewai[tools]==1.14.3",
    "langchain-ollama==1.1.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "ddgs>=8.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
crew-agent = "crew_agent.cli:main"
codex = "crew_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crew_agent = ["py.typed", "agents/definitions/*.yaml"]
